# backend/src/main/java/com/drinksaver/controller/admin/AdminAlcoholDefaultController.java
@@ -2,11 +2,14 @@ package com.drinksaver.controller.admin;
 
 import com.drinksaver.model.db.AlcoholSubtype;
 import com.drinksaver.model.db.AlcoholType;
+import com.drinksaver.model.dto.post.NewAlcoholEntry;
+import com.drinksaver.model.dto.post.NewAlcoholSubtype;
 import com.drinksaver.repository.AlcoholRepository;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import com.drinksaver.security.AuthenticatedUser;
+import jakarta.validation.Valid;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
 
@@ -29,5 +32,13 @@ public class AdminAlcoholDefaultController {
         return alcoholRepository.getAdminSubtypesByAlcoholType(alcoholTypeId);
     }
 
-    //TODO Volumes + PATCH/POST
+    @PostMapping("/types")
+    public AlcoholType createAlcoholType(@Valid @RequestBody NewAlcoholEntry newAlcoholEntry) {
+        return alcoholRepository.createAdminAlcoholType(newAlcoholEntry);
+    }
+
+    @PostMapping("/types/{alcoholTypeId}/subtypes")
+    public AlcoholSubtype getSubtypesByAlcoholType(@PathVariable Integer alcoholTypeId,  @Valid @RequestBody NewAlcoholSubtype newAlcoholSubtype) {
+        return alcoholRepository.saveAdminSubtypeForAlcoholType(alcoholTypeId, newAlcoholSubtype);
+    }
 }
